--- a/index.html
+++ b/index.html
@@ -4,31 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+
     <title>Ecologia</title>
 </head>
-<body>
 
+<body>
     <header>
         <img src="" alt="Logo">
+
         <nav>
-            <a href="">Conteúdos</a>
-            <a href="">Filme</a>
-            <a href="">Quiz</a>
+            <a href="">conteudp</a>
+            <a href="">Extras</a>
             <a href="">Sobre nós</a>
+
+            <button onclick="registrar()">Registre-se agora <img src="" alt="->"></button>
         </nav>
     </header>
 
-    <section class="ecologia_home">
+    <section class="carrossel">
         <div>
-            <h1>Ecologia</h1>
-            <h2>O estudo do ser vivo em contato com o ambiente</h2>
+            <h1>Conhecimento que germina consciência e cultiva mudanças</h1>
+            <p>EcoSeed: Plantando a semente do conhecimento ecológico no coração de quem transforma o futuro.</p>
+            <button onclick="registrar()">Register</button>
         </div>
+
+
     </section>
 
-    <section class="oq_ecologia">
-        <img src="" alt="Flor">
-        <div></div>
-    </section>
+
 </body>
 
 </html>
