grande parte do html feita

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="" alt="Logo">
 
         <nav>
-            <a href="">conteudp</a>
+            <a href="">Filmes</a>
             <a href="">Extras</a>
             <a href="">Sobre nós</a>
 
@@ -24,15 +24,79 @@
 
     <section class="carrossel">
         <div>
-            <h1>Conhecimento que germina consciência e cultiva mudanças</h1>
+            <h1>Conhecimento que germina consciência e <span>cultiva mudanças</span></h1>
             <p>EcoSeed: Plantando a semente do conhecimento ecológico no coração de quem transforma o futuro.</p>
             <button onclick="registrar()">Register</button>
         </div>
-
-
     </section>
 
+    <section class="nossosObjetivos">
+        <strong>🌱 Nossos Objetivos</strong>
+        <p>Plantando ideias, cultivando soluções para os desafios ecológicos.</p>
 
+        <div class="Objetivos">
+
+            <div class="consciencia">
+                <img src="" alt="pessoas">
+                <strong>Consciência Ecológica</strong>
+                <p>Estimular o pensamento crítico sobre os impactos ambientais e mudanças climáticas.</p>
+            </div>
+
+            <div class="pratica">
+                <img src="" alt="predio">
+                <strong>Prática Sustentável</strong>
+                <p>Promover o uso de energias limpas e a importância da reciclagem no dia a dia.</p>
+            </div>
+
+            <div class="apoio">
+                <img src="" alt="mãos">
+                <strong>Apoio Acadêmico</strong>
+                <p>Oferecer conteúdos que auxiliem no estudo e aprofundamento da ecologia.</p>
+            </div>
+        </div>
+    </section>
+    <section class="oqeecologia">
+        <div>
+            <img src="" alt="">
+            <div class="oqeecologia">
+                <strong>O que é ecologia?</strong>
+                <p>A ecologia é a ciência que estuda as relações entre os seres vivos e o ambiente. Ela analisa como os
+                    organismos interagem entre si e com os elementos naturais, buscando entender o funcionamento dos
+                    ecossistemas. Esse conhecimento é essencial para enfrentar desafios como as mudanças climáticas, a
+                    perda da biodiversidade e a escassez de recursos. Estudar ecologia é fundamental para construir um
+                    futuro mais sustentável e consciente.</p>
+                <button onclick="saibaMais()">Saiba mais</button>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <div>
+                <strong>O pulso do planeta em <span>fatos e impactos</span></strong>
+                <p>O cenário ambiental em dados reais.</p>
+            </div>
+            <div>
+                <strong><img src="" alt="pessoas">14.000.000</strong>
+                <p>Movimento Jovem</p>
+                <p>Mobilização de milhões de estudantes através do movimento Fridays Future em defesa do clima.</p>
+            </div>
+            <div>
+                <strong><img src="" alt="mãos">3,000</strong>
+                <p>Mobilização Acadêmica</p>
+                <p>Mais de 3.000 clubes universitários que promovem educação ambiental e sustentabilidade.</p>
+            </div>
+            <div><strong><img src="" alt="dedo">190</strong>
+                <p>Ação Global</p>
+                <p>A COP28 foi maior conferência climática do mundo reunindo 190 países para decisões ambientais.</p>
+            </div>
+            <div><strong><img src="" alt="pessoas">4,3 trilhões</strong>
+                <p>Custo Ambiental</p>
+                <p>Prejuízo anual causado pela degradação ambiental na economia global.</p>
+            </div>
+        </div>
+    </section>
+    
 </body>
 
 </html>
