--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
 
     <section class="carrossel">
         <div>
-            <h1>Conhecimento que germina consciência e <span>cultiva mudanças</span></h1>
-            <p>EcoSeed: Plantando a semente do conhecimento ecológico no coração de quem transforma o futuro.</p>
-            <button onclick="registrar()">Register</button>
+            <div>
+                <h1>Conhecimento que germina consciência e <span>cultiva mudanças</span></h1>
+                <p>EcoSeed: Plantando a semente do conhecimento ecológico no coração de quem transforma o futuro.</p>
+                <button onclick="registrar()">Register</button>
+            </div>
+            <img src="./imgs/Cooperação Global em Progresso Ambiental.png" alt="">
         </div>
     </section>
 
@@ -96,7 +99,7 @@
             </div>
         </div>
     </section>
-    
+
 </body>
 
 </html>
