imgs energias renovaveis e finalizacao do html e css e js do home

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="container">
             <a href="#" class="logo">
-                <img src="https://img.icons8.com/ios-filled/50/40C057/leaf.png" alt="Folha Verde" class="logo-icon">
+                <img src="./imgs/home/logoedu.png" alt="Folha Verde" class="logo-icon">
                 <span>EcoSeed</span>
             </a>
             <nav class="main-nav">
@@ -24,7 +24,6 @@
                     <li><a href="#">Sobre nós</a></li>
                 </ul>
             </nav>
-            <a href="#" class="btn btn-primary">Registre-se aqui</a>
         </div>
     </header>
 
@@ -37,7 +36,7 @@
                     <a href="#" class="btn btn-secondary">Começar</a>
                 </div>
                 <div class="hero-image">
-                    <img src="https://i.imgur.com/gReA2tB.png" alt="Ilustração de pessoas cuidando do planeta Terra">
+                    <img src="./imgs/home/img1.png" alt="Ilustração de pessoas cuidando do planeta Terra">
                 </div>
             </div>
         </section>
@@ -45,22 +44,21 @@
         <section class="objectives-section">
             <div class="container">
                 <div class="section-title">
-                    <img src="https://img.icons8.com/ios/30/40C057/natural-food.png" alt="Ícone de folha" class="title-icon">
-                    <h3>Nossos Objetivos</h3>
+                    <h3>🌱Nossos Objetivos</h3>
                 </div>
                 <div class="objectives-grid">
                     <div class="objective-card">
-                        <img src="https://i.imgur.com/kY8P8fJ.png" alt="Cérebro com folha">
+                        <img src="./imgs/home/icons/Icon1.png" alt="Cérebro com folha">
                         <h4>Conhecimento Abrangente</h4>
                         <p>Aprenda sobre ecologia, mudanças climáticas e o impacto de suas ações no planeta.</p>
                     </div>
                     <div class="objective-card">
-                        <img src="https://i.imgur.com/gK2J2pQ.png" alt="Mãos segurando broto">
+                        <img src="./imgs/home/icons/Icon2.png" alt="Mãos segurando broto">
                         <h4>Prática Sustentável</h4>
                         <p>Incentivamos a aplicação de práticas sustentáveis no seu dia a dia para um futuro mais verde.</p>
                     </div>
                     <div class="objective-card">
-                        <img src="https://i.imgur.com/fL3s4xP.png" alt="Prédio governamental">
+                        <img src="./imgs/home/icons/Icon3.png" alt="Prédio governamental">
                         <h4>Ajuda Governamental</h4>
                         <p>Informamos sobre políticas e incentivos governamentais que apoiam a sustentabilidade.</p>
                     </div>
@@ -71,7 +69,7 @@
         <section class="ecology-section">
             <div class="container ecology-layout">
                 <div class="ecology-image">
-                    <img src="https://i.imgur.com/W2d5wE3.png" alt="Ilustração de laboratório com plantas">
+                    <img src="./imgs/home/img2.png" alt="Ilustração de laboratório com plantas">
                 </div>
                 <div class="ecology-text">
                     <h3>O que é Ecologia?</h3>
@@ -88,22 +86,22 @@
                 </div>
                 <div class="stats-grid">
                     <div class="stat-item">
-                        <img src="https://i.imgur.com/c4Y2GfP.png" alt="Planeta">
+                        <img src="./imgs/home/icons/icon4.png" alt="Planeta">
                         <span class="stat-number">14.690.906</span>
                         <p>Espécies em risco de extinção</p>
                     </div>
                     <div class="stat-item">
-                        <img src="https://i.imgur.com/tYV6e3b.png" alt="Pino de mapa">
+                        <img src="./imgs/home/icons/icon5.png" alt="Pino de mapa">
                         <span class="stat-number">5.908</span>
                         <p>Áreas de proteção em todo o mundo</p>
                     </div>
                     <div class="stat-item">
-                        <img src="https://i.imgur.com/zW7gJ5g.png" alt="Nuvem">
+                        <img src="./imgs/home/icons/icon6.png" alt="Nuvem">
                         <span class="stat-number">1 Bilhão</span>
                         <p>De toneladas de CO2 lançados na atmosfera por ano</p>
                     </div>
                     <div class="stat-item">
-                        <img src="https://i.imgur.com/w9F3h5E.png" alt="Reciclagem">
+                        <img src="./imgs/home/icons/icon7.png" alt="Reciclagem">
                         <span class="stat-number">2,3 Bilhões</span>
                         <p>De toneladas de lixo reciclados por ano no mundo</p>
                     </div>
@@ -118,25 +116,25 @@
                     <p>Disponibilizamos diversos temas para você mergulhar de cabeça em nosso universo.</p>
                 </div>
                 <div class="content-grid">
-                    <div class="content-card" style="background-image: url('https://i.imgur.com/3qH82y8.jpg');">
+                    <div class="content-card" style="background-image: url('./imgs/home/industria.png');">
                         <div class="card-overlay">
                             <h4>Mudanças Climáticas</h4>
                             <a href="#" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
-                    <div class="content-card" style="background-image: url('https://i.imgur.com/o2xH2zL.jpg');">
+                    <div class="content-card" style="background-image: url('./imgs/home/lixo.png');">
                          <div class="card-overlay">
                             <h4>Reciclagem</h4>
                             <a href="#" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
-                    <div class="content-card" style="background-image: url('https://i.imgur.com/zY3qJ7V.jpg');">
+                    <div class="content-card" style="background-image: url('./imgs/home/energiaeolica.png');">
                          <div class="card-overlay">
                             <h4>Sustentabilidade</h4>
                             <a href="#" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
-                    <div class="content-card" style="background-image: url('https://i.imgur.com/s6wJ4bX.jpg');">
+                    <div class="content-card" style="background-image: url('./imgs/home/floresta.png');">
                          <div class="card-overlay">
                             <h4>Ecossistema</h4>
                             <a href="#" class="btn btn-tertiary">Acessar</a>
@@ -149,7 +147,7 @@
         <section class="quote-section">
             <div class="container quote-layout">
                 <div class="quote-image">
-                    <img src="https://i.imgur.com/J1k3L4Y.png" alt="Pessoa afagando um cachorro">
+                    <img src="./imgs/home/img3.png" alt="Pessoa afagando um cachorro">
                 </div>
                 <div class="quote-text">
                     <blockquote>
@@ -164,27 +162,27 @@
                 <h3 class="developers-title">DESENVOLVEDORES</h3>
                 <div class="developers-grid">
                     <div class="developer-profile">
-                        <img src="https://i.imgur.com/C3aM5N9.png" alt="Jullya Karoline">
+                        <img src="./imgs/home/pessoas/julya.png" alt="Jullya Karoline">
                         <p class="dev-name">Jullya Karoline</p>
                         <p class="dev-role">Pesquisadora e Designer</p>
                     </div>
                     <div class="developer-profile">
-                        <img src="https://i.imgur.com/dK5Zf5W.png" alt="Kailia Santana">
+                        <img src="./imgs/home/pessoas/kalebe.png" alt="Kelebe Santana">
                         <p class="dev-name">Kailia Santana</p>
                         <p class="dev-role">Programadora e Designer</p>
                     </div>
                     <div class="developer-profile">
-                        <img src="https://i.imgur.com/uNf7k2H.png" alt="Isabelly Loenna">
+                        <img src="./imgs/home/pessoas/isa.png" alt="Isabelly Loenna">
                         <p class="dev-name">Isabelly Loenna</p>
                         <p class="dev-role">Programadora</p>
                     </div>
                     <div class="developer-profile">
-                        <img src="https://i.imgur.com/jW5L6f7.png" alt="Ricardo Yuji">
+                        <img src="./imgs/home/pessoas/ricardo.png" alt="Ricardo Yuji">
                         <p class="dev-name">Ricardo Yuji</p>
                         <p class="dev-role">Programador</p>
                     </div>
                     <div class="developer-profile">
-                        <img src="https://i.imgur.com/A6v6hJt.png" alt="Joanna Vitória">
+                        <img src="./imgs/home/pessoas/joana.png" alt="Joanna Vitória">
                         <p class="dev-name">Joanna Vitória</p>
                         <p class="dev-role">Programadora</p>
                     </div>
@@ -212,7 +210,7 @@
         <div class="container footer-layout">
             <div class="footer-col">
                 <a href="#" class="logo footer-logo">
-                    <img src="https://img.icons8.com/ios-filled/50/ffffff/leaf.png" alt="Folha Branca" class="logo-icon">
+                    <img src="./imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
                     <span>EcoSeed</span>
                 </a>
             </div>
