energias renovaveis pronto

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoSeed - Conhecimento que germina consciência</title>
+    <link rel="icon" href="../imgs/home/logoedu.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -131,13 +132,13 @@
                     <div class="content-card" style="background-image: url('./imgs/home/energiaeolica.png');">
                          <div class="card-overlay">
                             <h4>Sustentabilidade</h4>
-                            <a href="#" class="btn btn-tertiary">Acessar</a>
+                            <a href="./pages/energias.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
                     <div class="content-card" style="background-image: url('./imgs/home/floresta.png');">
                          <div class="card-overlay">
                             <h4>Ecossistema</h4>
-                            <a href="#" class="btn btn-tertiary">Acessar</a>
+                            <a href="" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
                 </div>
