dei uma acelerada em  tudo por conta da pressão

--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
                     <div class="content-card" style="background-image: url('./imgs/home/industria.png');">
                         <div class="card-overlay">
                             <h4>Mudanças Climáticas</h4>
-                            <a href="#" class="btn btn-tertiary">Acessar</a>
+                            <a href="./pages/mudancas-climaticas.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
                     <div class="content-card" style="background-image: url('./imgs/home/lixo.png');">
                          <div class="card-overlay">
                             <h4>Reciclagem</h4>
-                            <a href="#" class="btn btn-tertiary">Acessar</a>
+                            <a href="./pages/reciclagem.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
                     <div class="content-card" style="background-image: url('./imgs/home/energiaeolica.png');">
@@ -138,7 +138,7 @@
                     <div class="content-card" style="background-image: url('./imgs/home/floresta.png');">
                          <div class="card-overlay">
                             <h4>Ecossistema</h4>
-                            <a href="" class="btn btn-tertiary">Acessar</a>
+                            <a href="./pages/ecossistema.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
         <section class="final-cta-section">
             <div class="container">
                 <h3>Missão ecológica ativada, clique e jogue!</h3>
-                <a href="#" class="btn btn-secondary btn-large">Jogue!</a>
+                <a href="./pages/quiz.html" class="btn btn-secondary btn-large">Jogue!</a>
             </div>
         </section>
 
@@ -245,6 +245,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
