--- a/pages/energias.html
+++ b/pages/energias.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoSeed - Energias Renováveis</title>
-    
+    <link rel="icon" href="../imgs/home/logoedu.png" type="image/png">
     <link rel="stylesheet" href="styleenergias.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -115,7 +115,7 @@
                     <div class="content-card" style="background-image: url('../imgs/home/industria.png');">
                         <div class="card-overlay">
                             <h4>Mudanças Climáticas</h4>
-                            <a href="#" class="btn btn-tertiary">Acessar</a>
+                            <a href="../pages/mudancas-climaticas.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
                     <div class="content-card" style="background-image: url('../imgs/home/lixo.png');">
@@ -186,6 +186,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="energias.js"></script>
 </body>
 </html>
