adiantando os estudos e filmes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class="main-nav">
                 <ul>
                     <li><a href="#">Causas</a></li>
-                    <li><a href="#">Parceiros</a></li>
+                    <li><a href="./pages/filmes.html">Parceiros</a></li>
                     <li><a href="#">Sobre nós</a></li>
                 </ul>
             </nav>
