--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -53,7 +53,7 @@
     </main>
     
     <div class="faq-float">
-        <a href="#">
+        <a href="./faq.html">
             <img src="https://img.icons8.com/ios-filled/50/ffffff/question-mark.png" alt="Ícone de ajuda">
         </a>
         <span>Perguntas frequentes</span>
