--- a/pages/filmes.html
+++ b/pages/filmes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoSeed - Filmes</title>
 
-    <link rel="icon" href="../imgs/favicon.png" type="image/png">
+    <link rel="icon" href="../imgs/home/logoedu.png" type="image/png">
     
     <link rel="stylesheet" href="stylefilmes.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
