paginas terminadas falta apenas as imgs

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </a>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#">Causas</a></li>
-                    <li><a href="./pages/filmes.html">Parceiros</a></li>
+                    <li><a href="#">Estudos</a></li>
+                    <li><a href="./pages/filmes.html">Filmes</a></li>
                     <li><a href="#">Sobre nós</a></li>
                 </ul>
             </nav>
