--- a/pages/filmes.html
+++ b/pages/filmes.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" href="../imgs/home/logoedu.png" type="image/png">
     
-    <link rel="stylesheet" href="stylefilmes.css">
+    <link rel="stylesheet" href="styleestudos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Lora:ital@0;1&display=swap" rel="stylesheet">
@@ -16,15 +16,15 @@
 
     <header class="header header-transparent">
         <div class="container">
-            <a href="#" class="logo">
+            <a href="../index.html" class="logo">
                 <img src="https://img.icons8.com/ios-filled/50/ffffff/leaf.png" alt="Folha Branca" class="logo-icon">
                 <span>EcoSeed</span>
             </a>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Parceiros</a></li>
-                    <li><a href="#">Sobre nós</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="./filmes.html">Parceiros</a></li>
+                    <li><a href="../index.html">Sobre nós</a></li>
                 </ul>
             </nav>
             <a href="#" class="btn btn-primary">Registre-se aqui</a>
